# esperlite

./: .codacy.yml  .coveragerc  .env.build  .env.development  .env.example  .env.production  .env.staging  .env.testing  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_TEST_REMEDIATION_PLAN.md  DEMO_PORTAL.md  DEMO_QUICKSTART.md  DEMO_STATUS.md  DETAILED_OPTIMIZATION_SUBPLANS.md  IMPLEMENTATION_STATUS_FINAL.md  NOTICE  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_VALIDATION_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE4_COMPLETE.md  PROJECT.md  README.md  REMEDIATION_PLAN.md  SECURITY.md  TEST_FAILURE_ANALYSIS.md  TEST_MODERNIZATION_REPORT.md  TORCH_SCATTER_ACCELERATION_PLAN.md  coverage.json  debug_policy.py  demo_compilation_pipeline.py  pyproject.toml  pytest.ini  pytest.ini.backup  test_suite_audit_final_summary.md  (+2 more)
.codacy/: codacy.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  morphogenetic_migration.yml  test-infrastructure.yml
benchmarks/: requirements.txt
benchmarks/morphogenetic_v2/: phase1_benchmarks.py  phase2_benchmarks.py  phase3_triton_benchmarks.py  triton_kernel_benchmark.py
config/: morphogenetic_features.json  morphogenetic_migration.yaml
configs/: README.md  cifar100_experiment.yaml  development.yaml  phase1_mvp.yaml
configs/demo/: tolaria.yaml
configs/examples/: cifar10_experiment.yaml
configs/templates/: default.yaml
docker/: Dockerfile.base  Dockerfile.demo-api  Dockerfile.tamiyo  Dockerfile.tolaria  Dockerfile.urza  docker-compose.dev-demo.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  install-acceleration.sh
docker/nginx/: demo.conf  simple.conf
docs/: PRODUCTION_READINESS.md  README.md
docs/api/: README.md
docs/architecture/: README.md
docs/archive/: OPTIMIZATION_ROADMAP_V2.md
docs/deployment/: README.md
docs/morphogenetic_v2/: phase4_message_bus.md
docs/project/: HLD.md  Implementation_Plan.md
docs/source/: conf.py  index.rst
docs/testing/: COMPREHENSIVE_TESTING_STRATEGY.md  FINAL_TESTING_VALIDATION.md  TESTING_IMPLEMENTATION_ROADMAP.md  WEEK1_IMPLEMENTATION_SUMMARY.md
examples/: README.md
examples/configs/: advanced.yaml  minimal.yaml
examples/morphogenetic_v2/: phase4_complete_example.py
examples/notebooks/: quickstart.ipynb
examples/scripts/: __init__.py  basic_training.py  custom_adaptation.py
k8s/base/: configmap.yaml  kustomization.yaml  namespace.yaml  postgresql.yaml  redis.yaml  secrets.yaml  tamiyo.yaml
models/: checkpoint_epoch_0.pt
monitoring/alerts/: morphogenetic_alerts.yml
monitoring/dashboards/: migration_progress.json  morphogenetic_overview.json
monitoring/prometheus/: prometheus.yml
scripts/: check-access.sh  compare_performance.py  configure-firewall.sh  demo-cpu-only.sh  demo-minimal.sh  deploy.sh  enable_phase1_features.py  establish_morphogenetic_baseline.py  fix-docker-dns.sh  generate-credentials.py  init_db.py  monitor-build.sh  phase2_demo.py  phase3_demo.py  quick-demo.sh  reset-demo.sh  run-coverage.sh  run_phase0_tasks.sh  run_phase2_benchmarks.sh  setup_test_services.sh  start-demo.sh  train_tamiyo.py  validate-infrastructure.sh
src/esper/: __init__.py  configs.py
tests/: FINAL_TESTING_VALIDATION.md  README.md  TEST_DEVIATION_ANALYSIS.md  TEST_FAILURE_RESOLUTION_SUMMARY.md  TEST_MODERNIZATION_SUMMARY.md  TEST_REFACTORING_SUMMARY.md  TEST_SUITE_DEVIATION_REPORT.md  WEEK1_IMPLEMENTATION_SUMMARY.md  __init__.py  conftest.py  production_scenarios.py
tests/contracts/: __init__.py  test_assets.py  test_enums.py  test_messages.py  test_operational.py  test_performance.py  test_validators.py
tests/core/: __init__.py  test_advanced_architectures.py  test_conv2d_support.py  test_model_wrapper.py  test_seed_orchestrator.py  test_seed_orchestrator_refactored.py
tests/execution/: KERNEL_CACHE_TEST_CHANGES.md  __init__.py  test_async_conv2d.py  test_kasmina_layer.py  (+5 more)
working_memory/: CONSOLIDATED_STATUS.md  CURRENT_STATUS.md  actual_project_state.md  morphogenetic_architecture_overview.md  phase4_test_fixes_complete.md  phase4_test_fixes_status.md  project_status_phase4_complete.md  technical_decisions_log.md  test_peer_review_summary.md  test_remediation_final_summary.md  test_remediation_plan.md  test_review_findings.md
z. deprecated/: CORE_TEST_REMEDIATION_SUMMARY.md  DEVELOPER_CHECKLIST.md  INDEPENDENT_CODE_REVIEW.md  PHASE0_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_REMEDIATION_PLAN.md  REMEDIATION_STATUS.md  REMEDIATION_SUMMARY.md
zz. roadmaps/: DETAILED_OPTIMIZATION_SUBPLANS.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_VALIDATION_PLAN.md  PHASE_1_1_COMPLETION_SUMMARY.md  PHASE_1_2_IMPLEMENTATION_PLAN.md  TORCH_SCATTER_ACCELERATION_PLAN.md
(+377 files in other folders)
